# kafka_panel

./: .eslintignore  .eslintrc.json  CHANGELOG.md  LICENSE  README.md  TEST.md  build.tsconfig.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/workflows/: e2e.yml  release.yml
e2e/: test.test.ts  tsconfig.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection.rs  groups.rs  lib.rs  logs.rs  main.rs  messages.rs  state.rs  storage.rs  topics.rs  utils.rs
src/components/: AlertDialog.vue  Button.vue  Chip.vue  ChooseTagsDialog.vue  CodeEditor.vue  ConfirmDialog.vue  CreateTopic.vue  CreateTopicDialog.vue  Dialog.vue  EditAutosendConfiguration.vue  EditMessage.vue  EditMessageContent.vue  EditMessageDialog.vue  EditMessageHeaders.vue  EditMessageStepper.vue  EditMessageStorageStepper.vue  EditTags.vue  Loader.vue  SaveMessageDialog.vue  Select.vue  SelectConnection.vue  SelectTopic.vue  SelectTopicDialog.vue  SendMessageDialog.vue  SendMessageStepper.vue  SendStorageMessageDialog.vue  SendStorageMessageStepper.vue  SetConnection.vue  SetConnectionDialog.vue  StartAutosendStepper.vue  Stepper.vue
src/composables/: alertDialog.ts  autosends.ts  confirmDialog.ts  connection.ts  loader.ts
src/pages/: Autosend.vue  Groups.vue  Messages.vue  MessagesStorage.vue  Settings.vue  Topics.vue
src/services/: Timer.ts  autosends.ts  checkSettings.ts  chipColors.ts  database.ts  kafka.ts  logger.ts  router.ts  (+4 more)
(+25 files in other folders)
